optimizations and comments